--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <title>Filecan</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <h1>Filecan</h1>
-        <p>hi</p>
+        <div class="paragraph">
+            <p>hi</p>
+        </div>
     </body>
 </html>
