--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -13,6 +13,7 @@
             <div class="paragraph">
                 <form>
                     <input type="file" id="files" name="files" multiple>
+                    <label for="password">Password:</label>
                     <input type="password" id="password" name="password">
                     <input type="submit" id="submit">
                 </form>
