--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -15,7 +15,7 @@
                     <input type="file" id="files" name="files" multiple>
                     <label for="password">Password:</label>
                     <input type="password" id="password" name="password">
-                    <input type="submit" id="submit">
+                    <input type="button" id="submit" value="Submit">
                 </form>
             </div>
         </div>
