switch to a hidden class

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div id="loading">
-            <img class="center" src="./img/loading.gif" style="display:none"></img>
+            <img class="center" src="./img/loading.gif" class="hidden"></img>
         </div>
         <div id="content" style="display:block">
             <h1>Filecan</h1>
