--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div id="loading">
-            <img class="center" src="./img/loading.gif" class="hidden"></img>
+        <div id="loading" class="hidden">
+            <img class="center" src="./img/loading.gif"></img>
         </div>
         <div id="content" style="display:block">
             <h1>Filecan</h1>
