--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -21,6 +21,10 @@
                         <p id="error"></p>
                     </div>
                     <input type="button" value="Submit" id="submitbutton">
+                    <div id="progressbox" class="hidden">
+                        <progress id="progressbar" value="0" max="100"></progress>
+                        <p id="progressinfo"></p>
+                    </div>
                 </form>
             </div>
         </div>
