--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -27,6 +27,9 @@
                     </div>
                 </form>
             </div>
+            <div id="results" class="paragraph hidden">
+                <p>test</p>
+            </div>
         </div>
     </body>
 </html>
