--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -28,6 +28,7 @@
                 </form>
             </div>
             <div id="results" class="paragraph hidden">
+                <p>test</p>
             </div>
         </div>
     </body>
