--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -28,7 +28,7 @@
                 </form>
             </div>
             <div id="results" class="paragraph hidden">
-                <p>test</p>
+                <p id="resultstext"></p>
             </div>
         </div>
     </body>
