--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -27,9 +27,9 @@
                     </div>
                 </form>
             </div>
-            <div id="results" class="paragraph hidden">
-                <p id="resultstext"></p>
-            </div>
+        </div>
+        <div id="results" class="paragraph hidden">
+            <p id="resultstext">test</p>
         </div>
     </body>
 </html>
