log view on /admin

--- a/src/client/admin/html/index.html
+++ b/src/client/admin/html/index.html
@@ -4,6 +4,15 @@
         <title>Admin Console</title>
     </head>
     <body>
-        <p>moment</p>
+        <div id="login">
+            <div class="paragraph">
+                <input type="password" id="password"/>
+                <button id="submit">Submit</button>
+                <p id="error"></p>
+            </div>
+        </div>
+        <div id="content" class="hidden">
+            <div id="logbox" class="logbox"></div>
+        </div>
     </body>
 </html>
