client minor bug fixes

--- a/src/client/client/html/index.html
+++ b/src/client/client/html/index.html
@@ -11,7 +11,7 @@
         </div>
         <div id="content" class="hidden">
             <div class="paragraph">
-                <form action="/api/upload" enctype="multipart/form-data" id="form">
+                <form action="javascript:void(0)" enctype="multipart/form-data" id="form">
                     <input type="file" id="files" name="files" multiple>
                     <div id="passwordbox">
                         <label for="password">Password:</label>
