admin page reform

--- a/src/client/admin/html/index.html
+++ b/src/client/admin/html/index.html
@@ -4,15 +4,19 @@
         <title>Admin Console</title>
     </head>
     <body>
-        <div id="login">
-            <div class="paragraph">
-                <input type="password" id="password"/>
-                <button id="submit">Submit</button>
-                <p id="error"></p>
+        <div class="content">
+            <div id="login">
+                <div class="paragraph">
+                    <input type="password" id="password"/>
+                    <button id="submit">Submit</button>
+                    <p id="error"></p>
+                </div>
             </div>
-        </div>
-        <div id="content" class="hidden">
-            <div id="logbox" class="logbox"></div>
+            <div id="content" class="hidden">
+                <h1 class="title">Admin</h1>
+                <h4>Recent logs:</h4>
+                <div id="logbox" class="logbox"></div>
+            </div>
         </div>
     </body>
 </html>
