view uploaded files in admin panel, WILL BE OVERHAULED with client/admin ui merge

--- a/src/client/admin/html/index.html
+++ b/src/client/admin/html/index.html
@@ -9,11 +9,12 @@
                 <div class="paragraph">
                     <input type="password" id="password"/>
                     <button id="submit">Submit</button>
-                    <p id="error"></p>
                 </div>
             </div>
             <div id="content" class="hidden">
                 <h1 class="title">Admin</h1>
+                <p>Uploaded files:</p>
+                <div id="filesbox" class="border"></div>
                 <h4>Recent logs:</h4>
                 <div id="logbox" class="logbox"></div>
             </div>
