--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <div class="content">
-            <h1 class="title">Filecan</h1>
-            <h6><a href="#" id="adminopen">admin</a></h6>
+            <h1 class="title" id="title">Filecan</h1>
+            <h6><a href="#" id="admintoggle">Admin</a></h6>
             <div id="loading">
                 <img class="center" src="./img/loading.gif"></img>
             </div>
@@ -49,11 +49,9 @@
                 <div class="paragraph">
                     <input type="password" id="adminpassword"/>
                     <input type="button" id="adminsubmit" value="Log in"/>
-                    <h6><a href="#" id="contentopen">Return</a></h6>
                 </div>
             </div>
             <div id="admincontent" class="hidden">
-                <h1 class="title">Admin</h1>
                 <p>Uploaded files:</p>
                 <div id="adminfilesbox" class="border"></div>
                 <h4>Recent logs:</h4>
