--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -56,6 +56,7 @@
                 <div id="adminfilesbox" class="border"></div>
                 <h4>Recent logs:</h4>
                 <div id="adminlogbox" class="logbox"></div>
+                <p><a href="#" id="adminlogclear">Clear logs (1 day)</a></p>
             </div>
         </div>
     </body>
